# Glow-rs

./: Cargo.toml  flake.nix
data/: 00000.npz
src/: lib.rs  main.rs
src/dataset/: bouncingball.rs  celeba.rs  cifar10.rs  mod.rs
src/models/: mod.rs
src/models/blocks/: linear.rs  mod.rs
