[package]
name = "glow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true, features = ["tch", "autodiff", "dataset", "ndarray"] }
image = "*"
ndarray = "0.16.1"
ndarray-npz = "0.4.2"
serde = "1.0.219"
rerun = {version = "0.30", features = ["run", "native_viewer"]}
rstest = "0.26.1"
# tch = {workspace = true}
